# sii

./: CMakeLists.txt  build.sh
artifacts/: sii.config.json
include/: common.hpp  service.hpp  service_manager.hpp
lambda/: .config  CMakeLists.txt  build.sh
src/: common.cpp  main.cpp  service.cpp  service_manager.cpp
